Remove rows with null CustomerID

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -396,11 +396,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_df['Total Sales'] = clean_df['Quantity'] * clean_df['UnitPrice']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select rows with no null values for the `CustomerID`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df = clean_df[clean_df['CustomerID'].notnull()]"
    ]
   },
   {
@@ -413,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
