--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -421,6 +421,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 324583 entries, 0 to 541908\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   InvoiceNo    324583 non-null  object \n",
+      " 1   StockCode    324583 non-null  object \n",
+      " 2   Description  324583 non-null  object \n",
+      " 3   Quantity     324583 non-null  int64  \n",
+      " 4   InvoiceDate  324583 non-null  object \n",
+      " 5   UnitPrice    324583 non-null  float64\n",
+      " 6   CustomerID   324583 non-null  float64\n",
+      " 7   Country      324583 non-null  object \n",
+      " 8   Total Sales  324583 non-null  float64\n",
+      "dtypes: float64(3), int64(1), object(5)\n",
+      "memory usage: 24.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_df.info()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
